# Slicer-ModelCropper

./: CMakeLists.txt  LICENSE.md  README.md
ModelCropper/: CMakeLists.txt  ModelCropper.py
